src/client/styles/bookStore.scss
@import 'variables.scss';

.bookstore-hero-logged-container{
  height: 70vh;
  background: url('../image/hero-image.jpg');
}

.bookstore-hero-anon-container{
  height: 70vh;
  background: url('../image/hero-anon-image.jpg');
}

.bookstore-hero-logged-container, .bookstore-hero-anon-container{
  padding-top: 60px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  position: relative;
  @media all and (max-width: 667px) and (orientation: landscape) {
    height: 70vh;
    background-repeat: no-repeat;
  }
  @media all and (min-width: 768px  ) {
    height: 50vh;
    background-repeat: no-repeat;
  }
  @media all and (min-width: 1024px) {
    height: 80vh;
    background-position: center;
  }
  h1{
    color: $white;
    text-align: center;
    margin-bottom: 15px;
    font-size: 20px;
    z-index: 10;
    @media all and (min-width: 768px){
      font-size: 26px;
    }
  }
  .bookstore-hero-logged-shop-wishlist{
    background: rgba(254, 254, 254, 0.10);
    border: solid 1px $white;
    border-radius: 23px;
    padding: 5px 7.5px;
    font-size: 14px;
    color: $white;
    transition: all .3s ease;
    z-index: 10;
    @media all and (min-width: 768px){
      padding: 10px 15px;
      font-size: 16px;
    }
    &:hover{
      background: $white;
      color: $black;
    }
  }
  .books-effect-in-hero-container{
    display: none;
    @media all and (min-width: 768px){
      position: absolute;
      right: -100px;
      bottom: -30px;
      display: flex;
      justify-content: space-between;
      align-items: center;
      flex-wrap: wrap;
      transform: rotate(-35deg);
      z-index: 9;
      max-width: 600px;
      @media all and (min-width: 1600px){
        max-width: 800px;
      }
    }
    .book-effect-column{
      &:nth-child(3) {
        margin-top: -50px;
      }
      figure{
        width: 100px;
        padding: 10px;
        @media all and (min-width: 1600px){
          width: 150px;
        }
      }
    }
  }
}

.categories-on-carousel-container{
  margin-bottom: -50px;
  .slick-slider{
    box-shadow: none;
    .slick-list{
      background: transparent;
      box-shadow: none;
      top: -65px;
      @media all and (max-width: 667px) and (orientation: landscape){
        top: -20px;
      }
      .slick-track{
        height: 140px;
        a{
          .category-on-carousel-square{
            width: 150px;
            height: 115px;
            margin: 0 6px;
            text-align: center;
            background: $white;
            border-radius: 5px;
            display: flex;
            justify-content: center;
            align-items: center;
            box-shadow: 0px 0px 9px 1px rgba(154, 154, 154, 0.5);
            background-image: linear-gradient(-134deg, #FFFFFF 0%, #F8FFFE 63%, #F7FCFF 100%);
            @media all and (min-width: 768px) {
              margin: 0 7.5px;
            }
            &:hover{
              cursor: pointer;
            }
            .category-on-carousel-name{
              color: #00CCCC;
              font-weight: 600;
              font-size: 15px;
              text-transform: capitalize;
            }
          }
        }
      }
    }
    .slick-arrow{
      display: none !important;
      @media all and (min-width: 1024px) {
        display: block !important;
        top: -8px;
        background-image: linear-gradient(-134deg, #FFFFFF 0%, #F8FFFE 63%, #F7FCFF 100%);
        box-shadow: 0px 0px 9px 1px rgba(154, 154, 154, 0.5);
        height: 115px;
        border-radius: 5px;
        z-index: 10;
      }
    }
    .slick-prev{
      display: none !important;
    }
    .slick-next{
      right: -45px;
      width: 40px;
      @media all and(min-width: 1024px) {
        right: -15px;
      }
      @media all and(min-width: 1200px) {
        right: -45px;
      }
      &:before{
        content: '>';
        color: $blue;
        font-size: 14px;
        font-weight: 600;
      }
    }
    .slick-dots{
      box-shadow: none;
      background: transparent;
      top: -120px;
      height: auto;
      @media all and (max-width: 667px) and (orientation: landscape){
        top: -55px;
      }
      li{
        button{
          &:before{
            opacity: 1;
            height: auto;
            color: rgba(247, 247, 247, 0.7);
          }
        }
      }
      .slick-active{
        button{
          &:before{
            color: $white;
          }
        }
      }
    }
  }
}
/* ... */

